--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <h1 align="center">My Name is Ankita</h1>
+    <h1 align="center">Ankita Info</h1>
+    <div align="center">
+        <img src="C:\Users\Admin\Downloads\Ankita Photo.jpg" alt="Ankita Image">
+        <span>My name is Ankita</span>
     </div>
 </body>
 </html>
